# brian2

./: .coveragerc  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .travis_long.yml  AUTHORS  CITATION.cff  CITATION.md  CODE_OF_CONDUCT.md  CONTRIBUTORS  LICENSE  MANIFEST.in  README  README.md  README.rst  README_POC.md  appveyor.yml  azure-pipelines.yml  codemeta.json  cppcode.cpp  cppcode_support.cpp  cythoncode.pyx  example_brian.py  numpy2.pyproject.toml  pyproject.toml  readthedocs.yml  requirements.txt  rtd-requirements.txt  rtd_environment.yml  setup.cfg  setup.py  table_script.py  test-cppyy-audit.py  test-cppyy-dynarray.py  test-cppyy-phase1.py  test-cppyy-synapses.py  (+4 more)
.codemeta/: codemeta_base.json  create_codemeta.py
.devcontainer/: Dockerfile  README.md  dev-requirements.txt  devcontainer.json
.eggs/: README.txt
.github/: dependabot.yml
.github/.workflows/: publish_to_test_pypi.yml
.github/workflows/: docker_image.yml  post_release_updates.yml  publish.yml  publish_to_pypi.yml  publish_to_test_pypi.yml  static_analysis.yml  test_doc_build.yml  test_latest.yml  testsuite.yml  update-spec-0-deps.yaml
astrocyte_tests/: example_1_COBA.py  example_2_gchi_astrocyte.py  example_3_io_synapse.py  example_4.py  example_4_rmeans.py  example_5_astro_ring.py  example_6_COBA_with_astro.py  figures.mplstyle
brian2/: .gitignore  __init__.py  _version.py  base.py  brian_unit_prefs.py  clocks.py  conftest.py  default_preferences  hears.py  numpy_.py  only.py  preferences.py
brian2/codegen/: __init__.py  _prefs.py  ast_parser.py  bdtype.py  codeobject.py  cpp_prefs.py  functions.py  get_cpu_flags.py  optimisation.py  parsing.py  permutation_analysis.py  specifiers.py  statements.py  symbolic.py  sympytools.py  targets.py  templates.py  templating.py  translation.py
brian2/core/: .gitignore  __init__.py  base.py  clocks.py  core_preferences.py  dynamic.py  functions.py  logger.py  magic.py  names.py  namespace.py  network.py  operations.py  preferences.py  scheduler.py  specifiers.py  spikesource.py  tracking.py  variables.py
brian2/devices/: __init__.py  device.py
brian2/equations/: __init__.py  codestrings.py  equations.py  refractory.py  unitcheck.py
brian2/functions/: __init__.py  timedarray.py
brian2/groups/: __init__.py  exp_imp.py  group.py  neurongroup.py  poisson_input.py  poissongroup.py  spikegeneratorgroup.py  spikequeue.py  subgroup.py  synapses.py
brian2/importexport/: __init__.py  dictlike.py  explicit.py  importexport.py
brian2/input/: __init__.py  binomial.py  poissongroup.py  poissoninput.py  spikegeneratorgroup.py  timedarray.py
brian2/input_b/: poissongroup.py  poissoninput.py
brian2/memory/: .gitignore  __init__.py  allocation.py  cdynamicarray.h  cppyy_dynamicarray.py  cythondynamicarray.cpp  cythondynamicarray.pyx  dynamicarray.py
brian2/monitors/: __init__.py  fixedstatemonitor.py  ratemonitor.py  spikemonitor.py  statemonitor.py
brian2/network/: __init__.py  magic.py  network.py  operations.py
brian2/parsing/: bast.py  dependencies.py  expressions.py  functions.py  loop_invariant_optimisations.py  rendering.py  simplification.py  statements.py  sympytools.py
brian2/random/: __init__.py  cythonrng.pxd  cythonrng.pyx
brian2/serialization/: __init__.py  brian_format.py
brian2/spatialneuron/: __init__.py  morphology.py  mp_ma_40984_gc2.CNG.swc  spatialneuron.py
brian2/sphinxext/: __init__.py  briandoc.py  docscrape.py  docscrape_sphinx.py  examplefinder.py  generate_examples.py  generate_reference.py
brian2/stateupdaters/: GSL.py  __init__.py  base.py  exact.py  explicit.py  exponential_euler.py  integration.py
brian2/synapses/: .gitignore  __init__.py  conditions.py  cppyy_spikequeue.py  cspikequeue.cpp  cspikequeue.h  cspikequeue.py  cythonspikequeue.pyx  parse_synaptic_generator_syntax.py  permutation_analysis.py  spikequeue.cpp  spikequeue.h  spikequeue.py  stdint_compat.h  synapses.py
brian2/tests/: .gitignore  __init__.py  conftest.py  func_def_cpp.cpp  func_def_cpp.h  func_def_cython.pxd  func_def_cython.pyx  pytest.ini  subgroup.py  test_GSL.py  test_base.py  test_clocks.py  test_codegen.py  test_codestrings.py  test_complex_examples.py  test_cpp_standalone.py  test_devices.py  test_docscrape.py  test_equations.py  test_functions.py  test_functions_unit.py  test_issue_1341.py  test_logger.py  test_memory.py  test_monitor.py  test_morphology.py  test_namespaces.py  test_network.py  test_neurongroup.py  test_numpy_codegen.py  test_parsing.py  test_poissongroup.py  test_poissoninput.py  test_preferences.py  test_refractory.py  test_spatialneuron.py  test_spikegenerator.py  test_spikequeue.py  test_statements.py  test_stateupdaters.py  (+10 more)
brian2/units/: __init__.py  allunits.py  constants.py  fundamentalunits.py  stdunits.py  units.py  unitsafefunctions.py
brian2/utils/: __init__.py  arrays.py  binomial.py  caching.py  (+11 more)
cppyy_optimization_work/: .gitignore
dev/: benchmark_connect.py  notes_on_passing_variables_to_templates.txt
docker/: Dockerfile  Dockerfile.python  README.md
docs/: cppyy-backend.md
docs_sphinx/: .gitignore  changes.rst  conf.py  conftest.py  environment.yml  index.rst  notes.rst
examples/: .gitignore  COBAHH.py  CUBA.py  CUBA_standalone.py  GALLERY_HEADER.rst  I-F_curve.py  I-F_curve_Hodgkin_Huxley.py  I-F_curve_LIF.py  IF_curve_Hodgkin_Huxley.py  IF_curve_LIF.py  README.rst  README.txt  STDP_standalone.py  adaptive_threshold.py  coupled_oscillators.py  cuba.py  infinite_cable.py  network_operation_stop.py  non_reliability.py  phase_locking.py  plot_CUBA.py  reliability.py  stochastic_odes.py  synapses.py  synapses_STDP.py  synapses_barrelcortex.py  synapses_gapjunctions.py  synapses_jeffress.py  synapses_licklider.py  synapses_nonlinear.py  synapses_spatial_connections.py  synapses_state_variables.py  weave_threshold.py
jupyter-cppyy/: test.ipynb
testing/: briantest.py
tutorials/: 1-intro-to-brian-neurons.ipynb  2-intro-to-brian-synapses.ipynb  3-intro-to-brian-simulations.ipynb  intro-to-brian-neurons.ipynb
(+781 files in other folders)
